--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -90,7 +90,7 @@
                         align-items: center;
                         margin-bottom: 0;
                     ">
-                Made with 78islandtea
+                78islandtea
             </p>
         </div>
     </a>
